# fbui

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  PHASE4.md  PHASE5.md  PHASE6.md  PLAN.md
.github/workflows/: ci.yml
docs/: instruments.md  profiling.md  record-replay.md  remote-console.md  running-on-your-device.md  terminal-backend.md
fbui/: Cargo.toml
fbui-platform/: Cargo.toml  PHASE1.md
fbui-platform/docs/: qemu.md
fbui-platform/examples/: echo.rs
fbui-platform/src/: backend.rs  cursor.rs  error.rs  event_loop.rs  format.rs  geom.rs  ioctl.rs  lib.rs  uevent.rs  vt.rs
fbui-platform/src/display/: drm.rs  fbdev.rs  mod.rs
fbui-platform/src/input/: evdev.rs  keymap.rs  libinput.rs  mod.rs
fbui-platform/src/seat/: libseat.rs  mod.rs  noseat.rs
fbui-platform/src/term/: display.rs  encode.rs  input.rs  mod.rs
fbui-platform/tests/: integration.rs  term_pty.rs
fbui-render/: Cargo.toml  PHASE2.md
fbui-render/benches/: repaint.rs
fbui-render/examples/: present.rs  settings_png.rs
fbui-render/src/: color.rs  copyout.rs  damage.rs  geom.rs  image.rs  lib.rs  painter.rs  path.rs  platform_glue.rs  sample.rs  scale.rs  surface.rs
fbui-render/src/text/: atlas.rs  mod.rs
fbui-render/tests/: snapshots.rs  text.rs
fbui-testkit/: Cargo.toml
fbui-testkit/src/: lib.rs
fbui-widgets/: Cargo.toml  DESIGN.md  PHASE3.md  README.md
fbui-widgets/benches/: scroll.rs
fbui-widgets/examples/: all_widgets.rs  gallery_png.rs  overlay_png.rs
fbui-widgets/src/: anim.rs  ctx.rs  event.rs  gesture.rs  kinetic.rs  lib.rs  popup.rs  style.rs  theme.rs  tree.rs  util.rs  widget.rs
fbui-widgets/src/widgets/: button.rs  chart.rs  checkbox.rs  container.rs  context_menu.rs  dialog.rs  gauge.rs  image.rs  keyboard.rs  label.rs  list.rs  menu.rs  mod.rs  progressbar.rs  radio.rs  scroll.rs  select.rs  slider.rs  spinner.rs  stack.rs  switch.rs  tabbar.rs  text_input.rs  toast.rs
fbui-widgets/tests/: behavior.rs  button_variant.rs  progress.rs  snapshot.rs
fbui/examples/: big_list.rs  counter.rs  custom_widget.rs  form.rs  osk.rs  overlay.rs  progress.rs  showcase.rs  telemetry.rs  timer.rs
fbui/src/: hud.rs  lib.rs  record.rs  run.rs  timer.rs
fbui/src/remote/: console.html  http.rs  hub.rs  json.rs  mod.rs
fbui/tests/: remote_http.rs
scripts/: build-showcase.sh  qemu-test.sh  run-showcase-qemu.sh
scripts/qemu/: launch-demo.sh
scripts/qemu/cloud-init/: meta-data  user-data
spikes/: Cargo.toml  NOTES.md  README.md
spikes/src/: card.rs  drm_backend.rs  fbdev.rs  ioctl.rs  main.rs  scene.rs  vt.rs
