[workspace]
resolver = "2"
members = ["fbui-platform", "fbui-render", "fbui-testkit", "fbui-widgets", "fbui"]
# The Phase 0 spike keeps its own lockfile and throwaway deps; it is not part of
# the framework workspace.
exclude = ["spikes"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.76"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aoprisan/fbui"

[profile.release]
debug = true
