[package]
name = "fbui-widgets"
version.workspace = true
description = "fbui widget toolkit: a retained widget tree with an Elm-ish update(msg) -> state -> damage -> paint loop, taffy flexbox/grid layout, and a software-rendered widget set (Label, Button, Checkbox, Slider, TextInput, containers, ScrollView, List, Image). Headless by design; draws through fbui-render's Painter."
edition.workspace = true
# Tracks fbui-render's heavier-dep MSRV floor (cosmic-text 1.89).
rust-version = "1.89"
license.workspace = true
repository.workspace = true
publish = false

[features]
default = []
# Emit `tracing` spans through the event → layout → paint pipeline so an app can
# capture a flamegraph of a frame. Off by default (and zero-cost when off).
profile = ["dep:tracing"]

[dependencies]
fbui-render = { path = "../fbui-render" }
taffy = "0.11"
slotmap = "1"
tracing = { version = "0.1", optional = true, default-features = false, features = ["std"] }

[dev-dependencies]
fbui-testkit = { path = "../fbui-testkit" }
criterion = { version = "0.5", default-features = false }

[[bench]]
name = "scroll"
harness = false
