[package]
name = "fbui"
version = "0.0.0"
description = "fbui: a framework for building UIs that draw straight to the Linux framebuffer/DRM — no X11, no Wayland. Umbrella crate re-exporting the render layer and widget toolkit, plus an app runner that drives the widget tree on a real display through the platform layer (behind the `platform` feature)."
edition.workspace = true
rust-version = "1.89"
license.workspace = true
repository.workspace = true
publish = false

[features]
# Headless by default (tests, snapshots, off-device tooling). The `platform`
# feature pulls in fbui-platform and the on-device runner.
default = []
platform = ["dep:fbui-platform", "fbui-render/platform"]

[dependencies]
fbui-render = { path = "../fbui-render" }
fbui-widgets = { path = "../fbui-widgets" }
fbui-platform = { path = "../fbui-platform", optional = true }

[[example]]
name = "counter"
required-features = ["platform"]

[[example]]
name = "form"
required-features = ["platform"]

[[example]]
name = "big_list"
required-features = ["platform"]
