[package]
name = "fbui"
version.workspace = true
description = "fbui: a framework for building UIs that draw straight to the Linux framebuffer/DRM — no X11, no Wayland. Umbrella crate re-exporting the render layer and widget toolkit, plus an app runner that drives the widget tree on a real display through the platform layer (behind the `platform` feature)."
edition.workspace = true
rust-version = "1.89"
license.workspace = true
repository.workspace = true
publish = false

[features]
# Headless by default (tests, snapshots, off-device tooling). The `platform`
# feature pulls in fbui-platform and the on-device runner.
default = []
platform = ["dep:fbui-platform", "fbui-render/platform"]
# Compile in a default font so an app that returns no fonts from `App::fonts`
# still renders text on a target with no installed fonts. Off by default; adds
# ~300 KB. See `fbui_render::FontContext`.
bundled-font = ["fbui-render/bundled-font"]
# Emit `tracing` spans through input → update → layout → paint → present so an
# app can capture a per-frame flamegraph. Off by default, zero-cost when off.
profile = ["dep:tracing", "fbui-widgets/profile"]

[dependencies]
fbui-render = { path = "../fbui-render" }
fbui-widgets = { path = "../fbui-widgets" }
fbui-platform = { path = "../fbui-platform", optional = true }
tracing = { version = "0.1", optional = true, default-features = false, features = ["std"] }

[[example]]
name = "counter"
required-features = ["platform"]

[[example]]
name = "form"
required-features = ["platform"]

[[example]]
name = "big_list"
required-features = ["platform"]

[[example]]
name = "progress"
required-features = ["platform"]

[[example]]
name = "custom_widget"
required-features = ["platform"]
